[tool.poetry]
name = "cat-facts"
version = "0.1.0"
description = ""
authors = ["gonzj988 <gonzj988@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "cat_facts"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
